--- a/asset/style.css
+++ b/asset/style.css
@@ -1,4 +1,8 @@
-header {
+* {
+  font-family: 'Lucida Sans Unicode', 'Lucida Grande', sans-serif;
+}
+
+header{
     position: fixed;
     top: 0;
     z-index: 2;
@@ -9,8 +13,24 @@ header {
   }
 
 .header {
-    font-family: 
-    text-align: right;
-    display: inline;
+  font-weight: bolder;
+  font-size: 24px;
+  text-align: right;
+  display: inline;
+  size: 20px;
+  color: white;
+}
+
+
+
+Footer{
+  position: fixed;
+  bottom: 0;
+  z-index: 2;
+  width: 100%;
+  height: 100px;
+  border-bottom: 10px solid rgb(161, 161, 117);
+  background-color: rgb(21, 61, 16);
+  text-align: center;
 
 }
